WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194827
Toggling visibility on the <html> element can result in a blank web view
https://bugs.webkit.org/show_bug.cgi?id=194827
Summary
Toggling visibility on the <html> element can result in a blank web view
Simon Fraser (smfr)
Reported
2019-02-19 13:24:05 PST
Toggling visibility on the <html> element can result in a blank web view
Attachments
Patch
(17.67 KB, patch)
2019-02-19 13:36 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-02-19 13:36:10 PST
Created
attachment 362420
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-02-19 13:36:12 PST
<
rdar://problem/47620594
>
EWS Watchlist
Comment 3
2019-02-19 13:39:30 PST
Attachment 362420
[details]
did not pass style-queue: ERROR: Source/WebCore/testing/Internals.h:350: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2019-02-19 17:39:40 PST
Comment on
attachment 362420
[details]
Patch Clearing flags on attachment: 362420 Committed
r241788
: <
https://trac.webkit.org/changeset/241788
>
WebKit Commit Bot
Comment 5
2019-02-19 17:39:42 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 6
2019-02-20 08:52:39 PST
The changes in
https://trac.webkit.org/changeset/241788/webkit
caused one API timeout on Mojave Debug. Timeout TestWebKitAPI.WebKit.ResizeReversePaginatedWebView _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. ASSERTION FAILED: !m_normalFlowListDirty ./rendering/RenderLayer.h(331) : WebCore::RenderLayer::LayerList WebCore::RenderLayer::normalFlowLayers() const 1 0x789fc5329 WTFCrash 2 0x77800c8db WTFCrashWithInfo(int, char const*, char const*, int) 3 0x77b6f26f3 WebCore::RenderLayer::normalFlowLayers() const 4 0x77b71f6ce WebCore::RenderLayerCompositor::recursiveRepaintLayer(WebCore::RenderLayer&) 5 0x77b71f732 WebCore::RenderLayerCompositor::recursiveRepaintLayer(WebCore::RenderLayer&) 6 0x77b71f565 WebCore::RenderLayerCompositor::repaintCompositedLayers() Run it is present on:
https://build.webkit.org/builders/Apple%20Mojave%20Debug%20WK2%20%28Tests%29/builds/1655
reproduced and confirmed locally.
Simon Fraser (smfr)
Comment 7
2019-02-20 13:03:18 PST
Fixing via
bug 194866
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug